--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <p>This is neat!</p>
     <p>I'm making my first website!!</p>
+    <p>This line was written at 2:00pm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
