--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
   <title>Hello, world!</title>
   </head>
-  <h1>Hello, world!</h1>
+  <header><h1>Hello, world!</h1></header>
   <body>
     <p>This is neat!</p>
     <p>I'm making my first website!!</p>
-    <p>This line was written at 2:00pm central time on Wed. Sept. 9, 2015</p>
+    <p>This line was written at 2:XXpm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
