--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
   <head>
   <title>Hello, world!</title>
   </head>
-  <header><h1>Hello, world!</h1></header>
   <body>
-    <p>This is neat!</p>
-    <p>I'm making my first website!!</p>
-    <p>This line was written at 2:XXpm central time on Wed. Sept. 9, 2015</p>
+    <header><h1>Hello, world!</h1></header>
+    <nav>
+      <a href = "hobby.html">Hobby</a>
+      <a href = "gallery.html">Gallery</a>
+    </nav>
+    <p>This line was written at 2:12pm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
