--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       <a href = "hobby.html">Hobby</a>
       <a href = "gallery.html">Gallery</a>
     </nav>
-    <p>This line was written at 2:12pm central time on Wed. Sept. 9, 2015</p>
+    <section>
+      <p>Information about myself</p>
+    </section>
+    <article>Assignments</article>
+    <p>This line was written at 2:13pm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
