--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
       <a href = "gallery.html">Gallery</a>
     </nav>
     <section>
-      <p>Information about myself</p>
+      <h3>Information about me, Jake Jorgenson</h3>
+      <ul>
+        <li>born Oct. 31, 1993</li>
+        <li>hometown: Stillwater, Minnesota</li>
+        <li>senior computer science & music double major at Luther College</li>
+      </ul>
     </section>
     <article>Assignments</article>
-    <p>This line was written at 2:13pm central time on Wed. Sept. 9, 2015</p>
+    <p>This line was written at 2:17pm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
