--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
         <li>born Oct. 31, 1993</li>
         <li>hometown: Stillwater, Minnesota</li>
         <li>senior computer science & music double major at Luther College</li>
+        <li>may get a pic of myself up here eventually</li>
       </ul>
     </section>
-    <article>Assignments</article>
-    <p>This line was written at 2:17pm central time on Wed. Sept. 9, 2015</p>
+    <article>
+      <h3>Assignments</h3>
+      <ol I>
+        <li>Thing 1</li>
+        <li>Thing 2</li>
+        <li>thing 3</li>
+      </ol>
+    </article>
+    <p>This line was written at 2:19pm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
