--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </section>
     <article>
       <h3>Assignments</h3>
-      <ol I>
+      <ol type=I>
         <li>Thing 1</li>
         <li>Thing 2</li>
         <li>thing 3</li>
       </ol>
     </article>
-    <p>This line was written at 2:19pm central time on Wed. Sept. 9, 2015</p>
+    <p>This line was written at 2:20pm central time on Wed. Sept. 9, 2015</p>
   </body>
 </html>
