--- a/hobbies.html
+++ b/hobbies.html
@@ -1,3 +1,8 @@
 <html>
-<h1>Placeholder until new content is created!</h1>
+  <head>
+    <title>Jake's Hobbies</title>
+  </head>
+  <body>
+    <h1>Hobbies Page To Be Created Soon!</h1>
+  </body>
 </html
