--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,24 @@
     <title>Jake's Hobbies</title>
   </head>
   <body>
-    <h1>Hobbies Page To Be Created Soon!</h1>
+    <h1>
+      A Few Hobbies of Mine:
+    </h1>
+    <ul>
+      <li>Playing trumpet</li>
+      <ul>
+        <li>Member of the Luther College Concert Band (Fall 2012-Present)</li>
+        <li>Member of the Luther College Jazz Orchestra (Fall 2013-Present)</li>
+        <li>Member of the Luther College Symphony Orchestra (Fall 2013-Spring 2014)</li>
+        <li>Member of the Luther College Chamber Orchestra (Fall 2014-Spring 2015)</li>
+        <li>Member of the Luther College Philharmonia Orchestra (Spring 2013, Spring 2015)</li>
+        <li>Member of the Luther College Jazz Band (Fall 2012-Spring 2013)</li>
+        <li>Member of the Luther College Trumpet Studio (Fall 2012-Present)</li>
+      </ul>
+      <li>Playing video games & hanging out with friends</li>
+      <li>Watching (and sometimes critiquing) movies</li>
+      <li>Composing & arranging music</li>
+      <li>Discovering new voice-impersonations</li>
+    </ul>
   </body>
 </html
