--- a/hobbies.html
+++ b/hobbies.html
@@ -22,5 +22,6 @@
       <li>Composing & arranging music</li>
       <li>Discovering new voice-impersonations</li>
     </ul>
+    <p>*Some images will be added soon to make this page look a <br />bit less encyclopedic & more like an actual webpage!</p>
   </body>
 </html
