--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <header><h1>Hello, world!</h1></header>
     <nav>
-      <a href = "hobby.html">Hobby</a>
+      <a href = "http://jorgja02.github.io/hobbies">Hobby</a>
       <a href = "gallery.html">Gallery</a>
     </nav>
     <section>
