--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <header><h1>Hello, world!</h1></header>
     <nav>
       <a href = "http://jorgja02.github.io/hobbies">Hobby</a>
-      <a href = "gallery.html">Gallery</a>
+      <a href = "http://jorgja02.github.io/gallery">Gallery</a>
     </nav>
     <section>
       <h3>Information about me, Jake Jorgenson</h3>
