--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-  <title>Hello, world!</title>
+  <title>Hello, world! It's me: Jake Jorgenson!</title>
   </head>
   <body>
-    <header><h1>Hello, world!</h1></header>
+    <header><h1>Jake Jorgenson</h1></header>
     <nav>
       <a href = "http://jorgja02.github.io/hobbies">Hobby</a>
       <a href = "http://jorgja02.github.io/gallery">Gallery</a>
