--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
       <h3>Information about me, Jake Jorgenson</h3>
       <ul>
-        <li>born Oct. 31, 1993</li>
+        <li>birthday: Oct. 31</li>
         <li>hometown: Stillwater, Minnesota</li>
         <li>senior computer science & music double major at Luther College</li>
         <li>may get a pic of myself up here eventually</li>
