--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,20 @@
     <title>Jake's Gallery</title>
   </head>
   <body>
-    <h1>Images will be added in the near future!</h1>
-    <p>But for now, here is a motivational dog picture:</p>
-    <img width=472px height=376px src="https://s-media-cache-ak0.pinimg.com/236x/f7/ee/5f/f7ee5f5a6979060d50e34106665c2706.jpg">
+    <h1>Jake's Gallery</h1>
+    <table>
+    <tr>
+    	<td><img width=472px height=376px src="https://petersonsprod.blob.core.windows.net/static/cdn/media/42846fed-ac93-451b-b555-66aae4ae4394"></td>
+  		<td><img width=472px height=376px src="http://images.fineartamerica.com/images-medium-large-5/the-trumpet-player-carl-frankel.jpg"></td>
+    </tr>
+    <tr>
+    	<td><img width=472px height=376px src="http://www.findyourspot.com/sites/all/images/fys/city/photos/Stillwater-Minnesota-2_photo.jpg"></td>
+  		<td><img width=472px height=376px src="http://www.usnews.com/img/college-photo_352._445x280-zmm.jpg"></td>
+    </tr>
+  </table>
+  <p>These images capture where I come from & where I am now (and sort of how I see myself).</p>
+  <p>Hope you enjoy this little gallery of mine here, hope to possibly get my own pictures <br />up here someday.</p>
+  <p>And of course, I can't get rid of this motivational dog picture, so here it is once again:</p>
+  <img width=472px height=376px src="https://s-media-cache-ak0.pinimg.com/236x/f7/ee/5f/f7ee5f5a6979060d50e34106665c2706.jpg">
   </body>
 </html>
