--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
          font-size: 14pt;
          text-align: center;
          background-color:gray;
-        font-family: Comic Sans MS;}
+        font-family: Arial;}
     </style>
     <title>Jake's Gallery</title>
   </head>
