--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
          text-align: center;
          background-color:gray;
         font-family: Arial;}
+      table{text-align: center;}
     </style>
     <title>Jake's Gallery</title>
   </head>
