--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,6 @@
          text-align: center;
          background-color:gray;
         font-family: Arial;}
-      table{text-align: center;}
     </style>
     <title>Jake's Gallery</title>
   </head>
@@ -29,7 +28,7 @@
     </tr>
   </table>
   <p>These images capture where I come from & where I am now (and sort of how I see myself).</p>
-  <p>Hope you enjoy this little gallery of mine here, hope to possibly get my own pictures up here someday.</p>
+  <p>Hope you enjoy this little gallery of mine here, hope to possibly get more pictures up here someday.</p>
   <p>And of course, I can't get rid of this motivational dog picture, so here it is once again:</p>
   <img width=472px height=376px src="https://s-media-cache-ak0.pinimg.com/236x/f7/ee/5f/f7ee5f5a6979060d50e34106665c2706.jpg">
   </body>
