--- a/hobbies.html
+++ b/hobbies.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <style>
+      h1{color: blue;
+         font-size: 32pt;
+         text-align: center;
+         background-color:gray;
+        font-family: Arial;}
+      body{background-color:thistle;}
+        
+    </style>
     <title>Jake's Hobbies</title>
   </head>
   <body>
@@ -22,6 +31,6 @@
       <li>Composing & arranging music</li>
       <li>Discovering new voice-impersonations</li>
     </ul>
-    <p>*Some images will be added soon to make this page look a <br />bit less encyclopedic & more like an actual webpage!</p>
+    <p>*Some images will hopefully be added soon to make this page look a <br />bit less encyclopedic & more like an actual webpage!</p>
   </body>
 </html
