--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <html>
   <head>
+    <style>
+      h1{color: blue;
+         font-size: 32pt;
+         text-align: center;
+         background-color:gray;
+        font-family: Comic Sans MS;}
+      h3{color: blue;
+         font-size: 28pt;
+         text-align: center;
+         background-color:thistle;
+        font-family: Comic Sans MS;}
+      body{background-color: silver;}
+    </style>
   <title>Jake Jorgenson</title>
   </head>
   <body>
