--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <header><h1>Hello, world! It's me: Jake Jorgenson!</h1></header>
     <nav>
-      <a href = "http://jorgja02.github.io/hobbies">Hobby</a>
-      <a href = "http://jorgja02.github.io/gallery">Gallery</a>
+      <a href = "http://jorgja02.github.io/hobbies">Some Hobbies of Mine</a>
+      <a href = "http://jorgja02.github.io/gallery">A Small Art Gallery</a>
     </nav>
     <section>
       <h3>Information about me, Jake Jorgenson</h3>
