--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <li>thing 3</li>
       </ol>
     </article>
-    <p>This line was written at 9:24pm central time on Thurs. Sept. 10, 2015</p>
+    <p>This line was written at 10:52am central time on Mon. Sept. 14, 2015</p>
   </body>
 </html>
