--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <article>
       <h3>Assignments</h3>
       <ol type=I>
-        <li>Thing 1</li>
+        <li><a href = "http://jorgja02.github.io/cs130_assignment1">CS130 Assignment #1: To Do List</a></li>
         <li>Thing 2</li>
         <li>thing 3</li>
       </ol>
