--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -1,9 +1,33 @@
 <html>
   <head>
-    <style></style>
+    <style>
+      body{background-color:black;}
+      #todo{text-align:center; text-size:48px; color:white;}
+      #highP{background-color:red;}
+      #medP{background-color:orange;}
+      #lowP{background-color:yellow;}
+    </style>
     <title>cs130_assignment1</title>
   </head>
   <body>
-    <header><h1>To Do List</h1></header>
+    <h1 id="todo">To Do List</h1>
+    <h3 id="highP">High Priority</h3>
+    <ul id="highP">
+      <li>Thing 1</li>
+      <li>Thing 2</li>
+      <li>Thing 3</li>
+    </ul>
+    <h3 id="medP">Medium Priority</h3>
+    <ul id="medP">
+      <li>Thing 1</li>
+      <li>Thing 2</li>
+      <li>Thing 3</li>
+      <li>Thing 4</li>
+    </ul>
+    <h3 id="lowP">Low Priority</h3>
+    <ul id="lowP">
+      <li>Thing 1</li>
+      <li>Thing 2</li>
+    </ul>
   </body>
 </html>
