--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -6,6 +6,7 @@
       #highP{background-color:red;}
       #medP{background-color:orange;}
       #lowP{background-color:yellow;}
+      #done{text-decoration:line-through;}
     </style>
     <title>cs130_assignment1</title>
   </head>
@@ -13,14 +14,14 @@
     <h1 id="todo">To Do List</h1>
     <h3 id="highP">High Priority</h3>
     <ul id="highP">
-      <li>Thing 1</li>
+      <li id="done">Thing 1</li>
       <li>Thing 2</li>
       <li>Thing 3</li>
     </ul>
     <h3 id="medP">Medium Priority</h3>
     <ul id="medP">
-      <li>Thing 1</li>
-      <li>Thing 2</li>
+      <li id="done">Thing 1</li>
+      <li id="done">Thing 2</li>
       <li>Thing 3</li>
       <li>Thing 4</li>
     </ul>
