--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -2,7 +2,10 @@
   <head>
     <style>
       body{background-color:black;}
-      #todo{text-align:center; text-size:48px; color:white;}
+      #todo{text-align:center; font-size:48pt; color:white;}
+      #highPtitle{text-align:center; background-color:red;}
+      #medPtitle{text-align:center; background-color:orange;}
+      #lowPtitle{text-align:center; background-color:yellow;}
       #highP{background-color:red;}
       #medP{background-color:orange;}
       #lowP{background-color:yellow;}
@@ -12,20 +15,20 @@
   </head>
   <body>
     <h1 id="todo">To Do List</h1>
-    <h3 id="highP">High Priority</h3>
+    <h3 id="highPtitle">High Priority</h3>
     <ul id="highP">
       <li id="done">Thing 1</li>
       <li>Thing 2</li>
       <li>Thing 3</li>
     </ul>
-    <h3 id="medP">Medium Priority</h3>
+    <h3 id="medPtitle">Medium Priority</h3>
     <ul id="medP">
       <li id="done">Thing 1</li>
       <li id="done">Thing 2</li>
       <li>Thing 3</li>
       <li>Thing 4</li>
     </ul>
-    <h3 id="lowP">Low Priority</h3>
+    <h3 id="lowPtitle">Low Priority</h3>
     <ul id="lowP">
       <li>Thing 1</li>
       <li>Thing 2</li>
