--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -3,9 +3,11 @@
     <style>
       body{background-color:black;}
       #todo{text-align:center; font-size:48pt; color:white;}
+      #critPtitle{text-align:center; background-color:rgb(255, 51, 204);}
       #highPtitle{text-align:center; background-color:red;}
       #medPtitle{text-align:center; background-color:orange;}
       #lowPtitle{text-align:center; background-color:yellow;}
+      #critP{background-color:rgb(255, 51, 204);}
       #highP{background-color:red;}
       #medP{background-color:orange;}
       #lowP{background-color:yellow;}
@@ -15,6 +17,11 @@
   </head>
   <body>
     <h1 id="todo">To Do List</h1>
+    <h3 id="critPtitle">!!!Critical/Extreme Priority!!!</h3>
+    <ul id="critP">
+      <li id="done">Thing 1</li>
+      <li>Thing 2</li>
+    </ul>
     <h3 id="highPtitle">High Priority</h3>
     <ul id="highP">
       <li id="done">Thing 1</li>
