--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -2,11 +2,11 @@
   <head>
     <style>
       body{background-color:black;}
-      #todo{text-align:center; font-size:48pt; color:white;}
-      #critPtitle{text-align:center; background-color:rgb(255, 51, 204);}
-      #highPtitle{text-align:center; background-color:red;}
-      #medPtitle{text-align:center; background-color:orange;}
-      #lowPtitle{text-align:center; background-color:yellow;}
+      #todo{font-family:Broadway; text-decoration:underline; text-align:center; font-size:48pt; color:white;}
+      #critPtitle{text-align:center; text-decoration:underline; background-color:rgb(255, 51, 204);}
+      #highPtitle{text-align:center; text-decoration:underline; background-color:red;}
+      #medPtitle{text-align:center; text-decoration:underline; background-color:orange;}
+      #lowPtitle{text-align:center; text-decoration:underline; background-color:yellow;}
       #critP{background-color:rgb(255, 51, 204);}
       #highP{background-color:red;}
       #medP{background-color:orange;}
