--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -3,14 +3,14 @@
     <style>
       body{background-color:black;}
       #todo{font-family:Broadway; text-decoration:underline; text-align:center; font-size:48pt; color:white;}
-      #critPtitle{text-align:center; text-decoration:underline; background-color:rgb(255, 51, 204);}
-      #highPtitle{text-align:center; text-decoration:underline; background-color:red;}
-      #medPtitle{text-align:center; text-decoration:underline; background-color:orange;}
-      #lowPtitle{text-align:center; text-decoration:underline; background-color:yellow;}
-      #critP{background-color:rgb(255, 51, 204);}
-      #highP{background-color:red;}
-      #medP{background-color:orange;}
-      #lowP{background-color:yellow;}
+      #critPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:rgb(255, 51, 204);}
+      #highPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:red;}
+      #medPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:orange;}
+      #lowPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:yellow;}
+      #critP{font-family:Arial; background-color:rgb(255, 51, 204);}
+      #highP{font-family:Arial; background-color:red;}
+      #medP{font-family:Arial; background-color:orange;}
+      #lowP{font-family:Arial; background-color:yellow;}
       #done{text-decoration:line-through;}
     </style>
     <title>cs130_assignment1</title>
