--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -19,26 +19,26 @@
     <h1 id="todo">To Do List</h1>
     <h3 id="critPtitle">!!!Critical/Extreme Priority!!!</h3>
     <ul id="critP">
-      <li id="done">Thing 1</li>
-      <li>Thing 2</li>
+      <li id="done">Complete to do webpage for CS130</li>
+      <li>Get Jupyter to work on my personal computer</li>
     </ul>
     <h3 id="highPtitle">High Priority</h3>
     <ul id="highP">
-      <li id="done">Thing 1</li>
-      <li>Thing 2</li>
-      <li>Thing 3</li>
+      <li id="done">Practice trumpet stuff for next private lesson appointment</li>
+      <li>Complete todo java application</li>
+      <li>Work on proposal for senior project</li>
     </ul>
     <h3 id="medPtitle">Medium Priority</h3>
     <ul id="medP">
-      <li id="done">Thing 1</li>
-      <li id="done">Thing 2</li>
-      <li>Thing 3</li>
-      <li>Thing 4</li>
+      <li id="done">Figure out wayt to make this webpage look cool</li>
+      <li id="done">Think of things to put into this list that aren't "Things 1-3"</li>
+      <li>Update resume</li>
+      <li>Read material for classes later this week</li>
     </ul>
     <h3 id="lowPtitle">Low Priority</h3>
     <ul id="lowP">
-      <li>Thing 1</li>
-      <li>Thing 2</li>
+      <li>Work on writing novel</li>
+      <li>Discover the lost city of Atlantis</li>
     </ul>
   </body>
 </html>
