--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -14,8 +14,10 @@
       #done{text-decoration:line-through;}
     </style>
     <title>cs130_assignment1</title>
+    <link rel=stylesheet href=todo.css type=text/css />
   </head>
   <body>
+    #id-->class="stuff"
     <h1 id="todo">To Do List</h1>
     <h3 id="critPtitle">!!!Critical/Extreme Priority!!!</h3>
     <ul id="critP">
