--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -1,46 +1,33 @@
 <html>
   <head>
-    <style>
-      body{background-color:black;}
-      #todo{font-family:Broadway; text-decoration:underline; text-align:center; font-size:48pt; color:white;}
-      #critPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:rgb(255, 51, 204);}
-      #highPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:red;}
-      #medPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:orange;}
-      #lowPtitle{font-family:Arial Unicode MS; font-size:24pt; text-align:center; text-decoration:underline; background-color:yellow;}
-      #critP{font-family:Arial; background-color:rgb(255, 51, 204);}
-      #highP{font-family:Arial; background-color:red;}
-      #medP{font-family:Arial; background-color:orange;}
-      #lowP{font-family:Arial; background-color:yellow;}
-      #done{text-decoration:line-through;}
-    </style>
     <title>cs130_assignment1</title>
     <link rel=stylesheet href=todo.css type=text/css />
   </head>
   <body>
-    #id-->class="stuff"
-    <h1 id="todo">To Do List</h1>
-    <h3 id="critPtitle">!!!Critical/Extreme Priority!!!</h3>
-    <ul id="critP">
-      <li id="done">Complete to do webpage for CS130</li>
+    <h1 class="todo">To Do List</h1>
+    <h3 class="critPtitle">!!!Critical/Extreme Priority!!!</h3>
+    <ul class="critP">
+      <li class="done">Complete to do webpage for CS130</li>
       <li>Get Jupyter to work on my personal computer</li>
     </ul>
-    <h3 id="highPtitle">High Priority</h3>
-    <ul id="highP">
-      <li id="done">Practice trumpet stuff for next private lesson appointment</li>
+    <h3 class="highPtitle">High Priority</h3>
+    <ul class="highP">
+      <li class="done">Practice trumpet stuff for next private lesson appointment</li>
       <li>Complete todo java application</li>
       <li>Work on proposal for senior project</li>
     </ul>
-    <h3 id="medPtitle">Medium Priority</h3>
-    <ul id="medP">
-      <li id="done">Figure out wayt to make this webpage look cool</li>
-      <li id="done">Think of things to put into this list that aren't "Things 1-3"</li>
+    <h3 class="medPtitle">Medium Priority</h3>
+    <ul class="medP">
+      <li class="done">Figure out wayt to make this webpage look cool</li>
+      <li class="done">Think of things to put into this list that aren't "Things 1-3"</li>
       <li>Update resume</li>
       <li>Read material for classes later this week</li>
     </ul>
-    <h3 id="lowPtitle">Low Priority</h3>
-    <ul id="lowP">
+    <h3 class="lowPtitle">Low Priority</h3>
+    <ul class="lowP">
       <li>Work on writing novel</li>
       <li>Discover the lost city of Atlantis</li>
+      <li>Written 1:45pm Wed. Sept. 16</li>
     </ul>
   </body>
 </html>
