--- a/cs130_assignment1.html
+++ b/cs130_assignment1.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+  <head></head>
     <title>cs130_assignment1</title>
     <link rel=stylesheet href=todo.css type=text/css />
   </head>
