--- a/todo.html
+++ b/todo.html
@@ -1,5 +1,5 @@
 <html>
-  <head></head>
+  <head>
     <title>cs130_assignment1</title>
     <link rel=stylesheet href=todo.css type=text/css />
   </head>
@@ -27,7 +27,7 @@
     <ul class="lowP">
       <li>Work on writing novel</li>
       <li>Discover the lost city of Atlantis</li>
-      <li>Written 2:14pm Wed. Sept. 16</li>
+      <li>Written 2:16pm Wed. Sept. 16</li>
     </ul>
   </body>
 </html>
