--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <article>
       <h3>Assignments</h3>
       <ol type=I>
-        <li><a href = "http://jorgja02.github.io/cs130_assignment1">CS130 Assignment #1: To Do List</a></li>
+        <li><a href = "http://jorgja02.github.io/todo">CS130 Assignment #1: To Do List</a></li>
         <li>Thing 2</li>
         <li>thing 3</li>
       </ol>
     </article>
-    <p>This line was written at 10:49pm central time on Mon. Sept. 14, 2015</p>
+    <p>This line was written at 2:18pm central time on Wed. Sept. 16, 2015</p>
   </body>
 </html>
