--- a/todo2.html
+++ b/todo2.html
@@ -1,33 +1,46 @@
 <html>
   <head>
-    <title>cs130_assignment1.2</title>
+    <title>cs130_assignment1</title>
     <link rel=stylesheet href=todo.css type=text/css />
+    <style>
+      .nav{font-family:Broadway; text-decoration:underline; text-align:center; font-size:48pt; color:black;}
+      .high{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:red;}
+      .medium{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:orange;}
+      .low{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:gray;}
+      .done{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:cyan;}
+    </style>
   </head>
   <body>
-    <h1 class="todo">To Do List</h1>
-    <h3 class="critPtitle">!!!Critical/Extreme Priority!!!</h3>
-    <ul class="critP">
-      <li class="done">Complete to do webpage for CS130</li>
-      <li>Get Jupyter to work on my personal computer</li>
-    </ul>
-    <h3 class="highPtitle">High Priority</h3>
-    <ul class="highP">
-      <li class="done">Practice trumpet stuff for next private lesson appointment</li>
-      <li>Complete todo java application</li>
-      <li>Work on proposal for senior project</li>
-    </ul>
-    <h3 class="medPtitle">Medium Priority</h3>
-    <ul class="medP">
-      <li class="done">Figure out wayt to make this webpage look cool</li>
-      <li class="done">Think of things to put into this list that aren't "Things 1-3"</li>
-      <li>Update resume</li>
-      <li>Read material for classes later this week</li>
-    </ul>
-    <h3 class="lowPtitle">Low Priority</h3>
-    <ul class="lowP">
-      <li>Work on writing novel</li>
-      <li>Discover the lost city of Atlantis</li>
-      <li>Written 2:17pm Wed. Sept. 16</li>
-    </ul>
+    <nav class="nav">
+    <h1>To Do List</h1>
+    </nav>
+    <article class="high">
+      <h1>High Priority!!</h1>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+      </ul>
+    </article>
+    <article class="medium">
+      <h1>High Priority!!</h1>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+      </ul>
+    </article>
+    <article class="low">
+      <h1>High Priority!!</h1>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+      </ul>
+    </article>
+    <article class="done">
+      <h1>High Priority!!</h1>
+      <ul>
+        <li>1</li>
+        <li>2</li>
+      </ul>
+    </article>
   </body>
 </html>
