--- a/todo2.html
+++ b/todo2.html
@@ -1,45 +1,38 @@
 <html>
   <head>
-    <title>cs130_assignment1</title>
+    <title>cs130_assignment1_markII</title>
     <link rel=stylesheet href=todo.css type=text/css />
-    <style>
-      .nav{font-family:Broadway; text-decoration:underline; text-align:center; font-size:48pt; color:black;}
-      .high{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:red;}
-      .medium{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:orange;}
-      .low{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:gray;}
-      .done{font-family:Arial Unicode MS; font-size:24pt; text-decoration:underline; background-color:cyan;}
-    </style>
   </head>
-  <body>
+  <body class="body">
     <nav class="nav">
     <h1>To Do List</h1>
     </nav>
     <article class="high">
       <h1>High Priority!!</h1>
       <ul>
-        <li>1</li>
-        <li>2</li>
+        <li>Finish To Do webpage</li>
+        <li>Fill out job applications</li>
       </ul>
     </article>
     <article class="medium">
-      <h1>High Priority!!</h1>
+      <h1>Medium Priority</h1>
       <ul>
-        <li>1</li>
-        <li>2</li>
+        <li>Review notes</li>
+        <li>Feed the pet rock</li>
       </ul>
     </article>
     <article class="low">
-      <h1>High Priority!!</h1>
+      <h1><i>Such</i> a High Priority... (Low Priority)</h1>
       <ul>
-        <li>1</li>
-        <li>2</li>
+        <li>Build model airplane</li>
+        <li>Consume Doritos and Pepsi</li>
       </ul>
     </article>
     <article class="done">
       <h1>High Priority!!</h1>
       <ul>
-        <li>1</li>
-        <li>2</li>
+        <li>Get Jupyter to work on my personal device</li>
+        <li>Successfully deduce the meaning of life</li>
       </ul>
     </article>
   </body>
