--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <h3>Assignments</h3>
       <ol type=I>
         <li><a href = "http://jorgja02.github.io/todo">CS130 Assignment #1: To Do List</a></li>
-        <li>Thing 2</li>
+        <li><a href = "http://jorgja02.github.io/todo2">CS130 Assignment #1: To Do List Mark II</a></li>
         <li>thing 3</li>
       </ol>
     </article>
-    <p>This line was written at 2:18pm central time on Wed. Sept. 16, 2015</p>
+    <p>This line was written at 11:43pm central time on Thurs. Sept. 17, 2015</p>
   </body>
 </html>
