--- a/todo2.html
+++ b/todo2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>cs130_assignment1_markII</title>
-    <link rel=stylesheet href=todo.css2 type=text/css />
+    <link rel=stylesheet href=todo2.css type=text/css />
   </head>
   <body class="body">
     <nav class="nav">
