--- a/todo2.html
+++ b/todo2.html
@@ -29,7 +29,7 @@
       </ul>
     </article>
     <article class="done">
-      <h1>High Priority!!</h1>
+      <h1>Completed</h1>
       <ul>
         <li>Get Jupyter to work on my personal device</li>
         <li>Successfully deduce the meaning of life</li>
