--- a/todo2.html
+++ b/todo2.html
@@ -19,6 +19,7 @@
       <ul>
         <li>Review notes</li>
         <li>Feed the pet rock</li>
+        <li>Clean my room</li>
       </ul>
     </article>
     <article class="low">
@@ -26,6 +27,8 @@
       <ul>
         <li>Build model airplane</li>
         <li>Consume Doritos and Pepsi</li>
+        <li>Watch the new South Park episode</li>
+        <li>Work on composition project</li>
       </ul>
     </article>
     <article class="done">
@@ -33,6 +36,7 @@
       <ul>
         <li>Get Jupyter to work on my personal device</li>
         <li>Successfully deduce the meaning of life</li>
+        <li>Finish java todo application</li>
       </ul>
     </article>
   </body>
