--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
   <head>
     <style>
       h1{color: blue;
+         border: 10px solid black;
          font-size: 32pt;
          text-align: center;
          background-color:gray;
-        font-family: Comic Sans MS;}
+        font-family: Forte;}
+      nav{position: fixed;
+        top: 0px;
+        left: 0px;
+        background-color: white;
+        width:100%;
+        height:30px;
+        text-align: center;}
+      nav a:hover{background-color: lightblue;
+        font-size: 105%;}
       h3{color: blue;
          font-size: 28pt;
          text-align: center;
@@ -16,12 +26,12 @@
   <title>Jake Jorgenson</title>
   </head>
   <body>
-    <header><h1>Hello, world! It's me: Jake Jorgenson!</h1></header>
     <nav>
       <a href = "http://jorgja02.github.io/hobbies">Some Hobbies of Mine</a>
       <a href = "http://jorgja02.github.io/gallery">A Small Art Gallery</a>
     </nav>
     <section>
+      <header><h1>Hello, world! This is Jake Jorgenson, welcome to my web page!</h1></header>
       <h3>Information about me, Jake Jorgenson</h3>
       <ul>
         <li>birthday: Oct. 31</li>
@@ -38,6 +48,6 @@
         <li>thing 3</li>
       </ol>
     </article>
-    <p>This line was written at 11:46pm central time on Thurs. Sept. 17, 2015</p>
+    <p>This line was written at 4:27pmpm central time on Sun. Sept. 27, 2015</p>
   </body>
 </html>
