--- a/hobbies.html
+++ b/hobbies.html
@@ -7,11 +7,27 @@
          background-color:gray;
         font-family: Arial;}
       body{background-color:thistle;}
-        
+      nav{position: fixed;
+        top: 0px;
+        left: 0px;
+        background-color: white;
+        width:100%;
+        height:30px;
+        text-align: center;
+        font-size: 16pt;
+      overflow: auto;}
+      nav a:hover{background-color: lightblue;
+        font-size: 105%;}
+      h1{margin-top: 60px;}
     </style>
     <title>Jake's Hobbies</title>
   </head>
   <body>
+    <nav>
+      <a href = "http://jorgja02.github.io"><img width=25px height=25px src="http://icons.iconarchive.com/icons/icons8/android/512/Very-Basic-Home-icon.png"></a>
+      <a href = "http://jorgja02.github.io/hobbies">Hobbies Page</a>
+      <a href = "http://jorgja02.github.io/gallery">Art Gallery</a>
+    </nav>
     <h1>
       A Few Hobbies of Mine:
     </h1>
@@ -31,6 +47,5 @@
       <li>Composing & arranging music</li>
       <li>Discovering new voice-impersonations</li>
     </ul>
-    <p>*Some images will hopefully be added soon to make this page look a <br />bit less encyclopedic & more like an actual webpage!</p>
-  </body>
+    </body>
 </html
