--- a/gallery.html
+++ b/gallery.html
@@ -5,17 +5,35 @@
          font-size: 32pt;
          text-align: center;
          background-color:gray;
-        font-family: Arial;}
+        font-family: Arial;
+        margin-top:60px;
+      }
       body{background-color:thistle;}
       p{color: white;
          font-size: 14pt;
          text-align: center;
          background-color:gray;
         font-family: Arial;}
+      nav{position: fixed;
+        top: 0px;
+        left: 0px;
+        background-color: white;
+        width:100%;
+        height:30px;
+        text-align: center;
+        font-size: 16pt;
+      overflow: auto;}
+      nav a:hover{background-color: lightblue;
+        font-size: 105%;}
     </style>
     <title>Jake's Gallery</title>
   </head>
   <body>
+    <nav>
+      <a href = "http://jorgja02.github.io"><img width=25px height=25px src="http://icons.iconarchive.com/icons/icons8/android/512/Very-Basic-Home-icon.png"></a>
+      <a href = "http://jorgja02.github.io/hobbies">Hobbies Page</a>
+      <a href = "http://jorgja02.github.io/gallery">Art Gallery</a>
+    </nav>
     <h1>Jake's Gallery</h1>
     <table>
     <tr>
