--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,8 @@
          font-size: 32pt;
          text-align: center;
          background-color:gray;
-        font-family: Arial;}
+        font-family: Arial;
+        margin-top: 60px;}
       body{background-color:thistle;}
       nav{position: fixed;
         top: 0px;
@@ -18,7 +19,6 @@
       overflow: auto;}
       nav a:hover{background-color: lightblue;
         font-size: 105%;}
-      h1{margin-top: 60px;}
     </style>
     <title>Jake's Hobbies</title>
   </head>
