--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,16 @@
 <html>
   <head>
     <style>
-      h1{color: blue;
+      h1{color: #00CCFF;
+         border: 10px solid black;
          font-size: 32pt;
          text-align: center;
-         background-color:gray;
-        font-family: Arial;
-        margin-top:60px;
-      }
+         font-family: Book Antiqua;
+         margin-top: 65px;
+        animation-name: example;
+        animation-duration: 4s;
+        animation-direction: alternate;
+        animation-iteration-count: infinite;}
       body{background-color:thistle;}
       p{color: white;
          font-size: 14pt;
