--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       <a href = "http://jorgja02.github.io/gallery">Art Gallery</a>
     </nav>
     <section>
-      
       <h1>Hello, world! This is Jake Jorgenson, welcome to my web page!</h1>
       <article id="a1">
         <h3>Information about me</h3>
@@ -32,6 +31,6 @@
       </article>
     </section>
     
-    <footer><p>This web page was last updated at 11:16pm central time on Sun. Sept. 27, 2015</p></footer>
+    <footer><p>This web page was last updated at 11:49am central time on Mon. Sept. 28, 2015</p></footer>
   </body>
 </html>
