--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <style>
+      @keyframes example{
+        from{background-color: #4C4C4C;}
+        to{background-color: gray;}}
       h1{color: #00CCFF;
          border: 10px solid black;
          font-size: 32pt;
