--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       </article>
     </section>
     
-    <footer><p>This web page was last updated at 11:49am central time on Mon. Sept. 28, 2015</p></footer>
+    <footer><p>This web page was last updated at 1:44pm Central Time on Mon. Sept. 28, 2015</p></footer>
   </body>
 </html>
