--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <h3>Assignments</h3>
       <ol type=I>
         <li><a href = "http://jorgja02.github.io/todo">CS130 Assignment #1: To Do List</a></li>
-        <li><a href = "http://jorgja02.github.io/todo2">CS130 Assignment #1: To Do List Mark II</a></li>
-        <li>thing 3</li>
+        <li><a href = "http://jorgja02.github.io/todo2">CS130 Assignment #2: To Do List Mark II</a></li>
+        <li><a href = "http://jorgja02.github.io/todo3">CS130 Assignment #3: To Do List Mark III</a></li>
       </ol>
       </article>
     </section>
     
-    <footer><p>This web page was last updated at 1:44pm Central Time on Mon. Sept. 28, 2015</p></footer>
+    <footer><p>This web page was last updated at 8:02pm Central Time on Thurs. Oct. 1, 2015</p></footer>
   </body>
 </html>
