--- a/todo3.html
+++ b/todo3.html
@@ -17,11 +17,11 @@
     .todo1{color:white;}
   </style>
   <head>
-    <title>cs130_assignment1_markII</title>
+    <title>cs130_assignment1_markIII</title>
   </head>
   <body class="body">
     <nav class="nav">
-    <h1>To Do List</h1>
+    <h1>To Do List Mark III</h1>
     </nav>
     <article class="high">
       <h1>High Priority!!</h1>
