--- a/calculator.html
+++ b/calculator.html
@@ -1,5 +1,6 @@
  <html>
    <style>
+     body{background-color:#CCFFFF;}
      input{width:200px;
         height:100px;
         background-color:#FFFFCC;}
